--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap');
 
 :root {
-    --primary: #29e9bc;
-    --normal: #ffffff;
+    --primary: #89f70ba4;
+    --normal: #f8f1f1;
     --black: #13131a;
     --bg: #0c1013;
     --danger: #f75842;
